docs: updating command example

--- a/custom-ubuntu-image/Dockerfile
+++ b/custom-ubuntu-image/Dockerfile
@@ -1,3 +1,11 @@
+# How to use the docker image
+#
+# docker run --rm -it \
+#	--name ubuntu \
+#	dshome/customubuntu-image \
+#   bash
+#
+
 FROM ubuntu
 LABEL maintainer "Debabrata Shome <dham6983@gmail.com>"
 RUN apt-get update && \
